Packaging, Conan provided

--- a/sources/HttpControllers/CMakeLists.txt
+++ b/sources/HttpControllers/CMakeLists.txt
@@ -8,6 +8,7 @@ target_include_directories(HttpControllers
 )
 target_link_libraries(HttpControllers
         PUBLIC
+    Boost::json
     DhcpPacket
     Configuration
     Statistics
